--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@prisma/client": "^4.8.1",
     "@syncfusion/ej2": "^19.4.48",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
     "@syncfusion/ej2-react-charts": "^19.4.50",
@@ -13,6 +14,10 @@
     "@syncfusion/ej2-react-popups": "^19.4.52",
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
+    "body-parser": "^1.20.1",
+    "cors-anywhere": "^0.4.4",
+    "express": "^4.18.2",
+    "prisma": "^4.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -21,6 +26,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node ./server/index.js",
+    "cors": "PORT=8888 HOST=localhost node ./node_modules/cors-anywhere/server.js",
+    "prisma": "npx prisma studio",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -53,5 +61,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
